<resources>

    <string name="app_name">校园资源共享系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">校园资源共享系统</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="id">用户名</string>
    <string name="password">密        码</string>
    <string name="reset">重        置</string>
    <string name="login">登        录</string>
    <string name="bottom_radio_home">课程</string>
    <string name="bottom_radio_parking">直播</string>
    <string name="bottom_radio_map">公开课</string>
    <string name="bottom_radio_me">我的</string>
    <string name="user_information">车主信息</string>
    <string name="vehicle_information">车辆信息</string>
    <string name="user_no">编  号：</string>
    <string name="user_name">姓  名：</string>
    <string name="user_gender">性  别：</string>
    <string name="user_idcard">身份证号：</string>
    <string name="user_age">年  龄：</string>
    <string name="user_department">部  门：</string>
    <string name="user_job">职  称：</string>
    <string name="user_telephone">联系电话：</string>
    <string name="vehicle_plate">车牌号码：</string>
    <string name="vehicle_old_plate">原车牌号：</string>
    <string name="vehicle_vin_number">车辆编码：</string>
    <string name="vehicle_manufacturer">生产厂商：</string>
    <string name="vehicle_name">车辆型号：</string>
    <string name="vehicle_color">车辆颜色：</string>
    <string name="vehicle_max_passenger">车辆限员：</string>
    <string name="vehicle_insure">保险情况：</string>
    <string name="vehicle_check">年检情况：</string>
    <string name="vehicle_note">备 注：</string>
    <string name="cancel_user_information">取消</string>
    <string name="alter_user_information">修改</string>
    <string name="cancel_vehicle_information">取消</string>
    <string name="submit_vehicle_information">提交</string>
    <string name="submit_user_information">提交</string>
    <string name="alter_vehicle_information">修改</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string-array name="menu_list">
        <item>官方网站</item>
        <item>在线反馈</item>
        <item>偏好设置</item>
        <item>帮助信息</item>
        <item>用户注销</item>
        <item>我的消息</item>
        <item>会员中心</item>
        <item>个性皮肤</item>
        <item>附近的人</item>
    </string-array>
    <string name="node_map">预览</string>
    <string name="location_map">定位</string>
    <string name="avatar">头像</string>
    <string name="message_hint">请在此处写下您的意见和建议，我们将进行甄选采纳，谢谢！</string>
    <string name="send_message">发送</string>
    <string name="basic_information">基本信息</string>
    <string name="wayfinding">地图寻路</string>
    <string name="parking_location">停车地点：</string>
    <string name="parking_start_time">起始时间：</string>
    <string name="parking_time">停车时间：</string>
    <string name="parking_payment">停车费用：</string>
    <string name="parking_status">停车状态：</string>
    <string name="parking_space">剩余车位：</string>
    <string name="wayfinding_note">请注意：按下开始键将唤起手机浏览器，跳转至导航页面。</string>

</resources>