<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
        	android:layout_height="match_parent">
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin" >

        <TableRow
            android:id="@+id/TableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_no" />

            <EditText
                android:id="@+id/user_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_name" />
            
            <EditText
                android:id="@+id/user_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/TableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_gender" />
            
            <EditText
                android:id="@+id/user_sex_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>          

        </TableRow>

        <TableRow
            android:id="@+id/TableRow09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_id_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_idcard" />
            
            <EditText
                android:id="@+id/user_id_card_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>          
        </TableRow>

        <TableRow
            android:id="@+id/TableRow16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_age" />
            
            <EditText
                android:id="@+id/user_age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>          
        </TableRow>

        <TableRow
            android:id="@+id/TableRow15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_department" />

            <EditText
                android:id="@+id/user_department_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>     
        </TableRow>

        <TableRow
            android:id="@+id/TableRow14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_job" />

            <EditText
                android:id="@+id/user_job_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>     
        </TableRow>

        <TableRow
            android:id="@+id/TableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/user_telephone" />
            
            <EditText
                android:id="@+id/user_telephone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >
            </EditText>     

        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/cancel_user_information"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/cancel_user_information"
                android:textSize="@dimen/activity_horizontal_margin"
                android:visibility="invisible" />
			<FrameLayout
			    android:layout_width="wrap_content"
                android:layout_height="40dp">

          	  <Button
          	      android:id="@+id/submit_user_information"
          	      style="?android:attr/buttonStyleSmall"
          	      android:layout_width="wrap_content"
          	      android:layout_height="40dp"
          	      android:layout_marginLeft="@dimen/activity_horizontal_margin"
          	      android:text="@string/submit_user_information"
          	      android:textSize="@dimen/activity_horizontal_margin"
          	      android:visibility="invisible" />
          	  
          	  <Button
                android:id="@+id/alter_user_information"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/alter_user_information"
                android:textSize="@dimen/activity_horizontal_margin" />
          	</FrameLayout>

        </LinearLayout>

    </TableLayout>
</ScrollView>
