<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="login.MainActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_password"
            android:layout_alignLeft="@+id/id"
            android:layout_toLeftOf="@+id/edit_id"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/id"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_id"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp"
            android:text="@string/id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_id"
            android:layout_below="@+id/edit_id"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/reset"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="45dp"
            android:layout_toLeftOf="@+id/edit_password"
            android:text="@string/reset" />

        <Button
            android:id="@+id/login"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/reset"
            android:layout_alignBottom="@+id/reset"
            android:layout_alignRight="@+id/edit_password"
            android:layout_marginRight="42dp"
            android:text="@string/login" />

    </RelativeLayout>

</FrameLayout>