 <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/tab_selector_weixing"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/bottom_radio_home"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbParking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_tongxunlu"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/bottom_radio_parking"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_faxian"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/bottom_radio_map"
            android:textColor="@color/tab_selector_tv_color" />

        <RadioButton
            android:id="@+id/rbMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/tab_selector_checked_bg"
            android:button="@null"
            android:drawableTop="@drawable/tab_selector_wo"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="设置"
            android:textColor="@color/tab_selector_tv_color" />
    </RadioGroup>
</LinearLayout>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_gravity="left">
    

    
    <ListView
            android:id="@id/android:list"
            android:background="#ffffff"
       		android:layout_width="match_parent"
        	android:layout_height="match_parent" />
    
</LinearLayout>
</android.support.v4.widget.DrawerLayout>